[gd_scene load_steps=2 format=2]

[ext_resource path="res://world/World.gd" type="Script" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
